[gd_scene load_steps=18 format=2]

[ext_resource path="res://games/scrap_road/index.gd" type="Script" id=1]
[ext_resource path="res://games/scrap_road/assets/Background.png" type="Texture" id=2]
[ext_resource path="res://games/scrap_road/assets/RoadLines.png" type="Texture" id=3]
[ext_resource path="res://games/scrap_road/scripts/MovingBackgroundElement.gd" type="Script" id=4]
[ext_resource path="res://games/scrap_road/assets/Grass.png" type="Texture" id=5]
[ext_resource path="res://games/scrap_road/scripts/BoxSpawner.gd" type="Script" id=6]
[ext_resource path="res://games/scrap_road/scripts/CountLabel.gd" type="Script" id=7]
[ext_resource path="res://games/scrap_road/assets/fonts/Photonica_regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://games/scrap_road/scripts/Timer.gd" type="Script" id=9]
[ext_resource path="res://games/scrap_road/assets/music/racing_track.wav" type="AudioStream" id=10]
[ext_resource path="res://games/scrap_road/assets/sfx/Cancel 1.wav" type="AudioStream" id=11]
[ext_resource path="res://games/scrap_road/assets/sfx/Confirm 1.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 300, 540 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 600, 40 )

[sub_resource type="DynamicFont" id=3]
size = 128
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 72
font_data = ExtResource( 8 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Players" type="Node2D" parent="."]

[node name="BoxSpawner" type="Node" parent="."]
script = ExtResource( 6 )
start_spawn_area = 340
end_spawn_area = 1640

[node name="Debris" type="Node" parent="BoxSpawner"]

[node name="Positions" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Positions"]
position = Vector2( 600, 700 )

[node name="Position2D2" type="Position2D" parent="Positions"]
position = Vector2( 1320, 700 )

[node name="Position2D3" type="Position2D" parent="Positions"]
position = Vector2( 1080, 700 )

[node name="Position2D4" type="Position2D" parent="Positions"]
position = Vector2( 840, 700 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.6
one_shot = true
autostart = true

[node name="EndTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="Announce_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BackgroundElements" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="BackgroundElements"]
position = Vector2( 960, 540 )
scale = Vector2( 6, 6 )
z_index = -100
texture = ExtResource( 2 )

[node name="RoadLines" type="Sprite" parent="BackgroundElements"]
position = Vector2( 960, 540 )
scale = Vector2( 6, 6 )
z_index = -90
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 400, 1200 )
script = ExtResource( 4 )
move_speed = 1800

[node name="Grass" type="Sprite" parent="BackgroundElements"]
position = Vector2( 960, 540 )
scale = Vector2( 6, 6 )
z_index = -90
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 400, 1200 )
script = ExtResource( 4 )
move_speed = 1800

[node name="InvisibleWalls" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InvisibleWalls"]
position = Vector2( 60, 540 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="InvisibleWalls"]
position = Vector2( 1860, 540 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="InvisibleWalls"]
position = Vector2( 960, 40 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="InvisibleWalls"]
position = Vector2( 960, 1040 )
shape = SubResource( 2 )

[node name="Overlay" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountLabel" type="Label" parent="Overlay"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_fonts/font = SubResource( 3 )
text = "GO!"
align = 1
valign = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RaceTimer" type="Control" parent="Overlay"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="Overlay/RaceTimer"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_right = 352.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLeft" type="Label" parent="Overlay/RaceTimer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 4 )
text = "Time Left:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="Overlay/RaceTimer"]
margin_left = 20.0
margin_top = 60.0
margin_right = 352.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 5 )
text = "60.00"
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoadMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="SFX_READY" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="SFX_GO" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
